# mdd4tables

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  VISUALIZATION.md  mdd4tables_requirements.md  pyproject.toml  setup_github.sh  temp_visualize.py
.github/workflows/: docs.yml
docs/: concepts.rst  conf.py  examples.rst  index.rst  quickstart.rst  requirements.txt  visualization.rst
docs/api/: builder.rst  config.rst  index.rst  mdd.rst  ordering.rst  schema.rst  visualization.rst
examples/: bdd_wikipedia_example.py  bdd_wikipedia_example_comparison.py  demo.py  lanes_mdd_example.py  lanes_mdd_example_backup.py  lanes_pyvis.py  viz_demo.py
mdd4tables/: __init__.py  binning.py  builder.py  config.py  mdd.py  ordering.py  schema.py  slice_compile.py  viz.py  viz_advanced.py
tests/: test_basic.py
