[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdd4tables"
version = "0.1.0"
description = "Multi-Valued Decision Diagrams for tabular data: compress rows into an MDD and query with probabilities."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "mdd4tables contributors"}
]
maintainers = [
    {name = "mdd4tables contributors"}
]
keywords = [
    "mdd",
    "decision-diagram",
    "bdd",
    "data-compression",
    "tabular-data",
    "machine-learning",
    "conditional-probability",
    "query",
    "visualization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.23",
    "pandas>=1.5"
]

[project.optional-dependencies]
viz = [
    "networkx>=3.0",
    "matplotlib>=3.6",
    "plotly>=5.0",
    "pyvis>=0.3.0"
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0"
]
all = [
    "mdd4tables[viz,dev]"
]

[project.urls]
Homepage = "https://github.com/yourusername/mdd4tables"
Documentation = "https://github.com/yourusername/mdd4tables#readme"
Repository = "https://github.com/yourusername/mdd4tables"
"Bug Tracker" = "https://github.com/yourusername/mdd4tables/issues"
Changelog = "https://github.com/yourusername/mdd4tables/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdd4tables*"]
exclude = ["tests*", "examples*", ".venv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = []